--- a/templates/default/query.html
+++ b/templates/default/query.html
@@ -52,7 +52,7 @@ table.select_list thead a {
 
 <body>
 <span style="font-weight:bold; color:#F00;">{$error}</span>
-{include file=$templates.TEMPLATE_ADDRESS}<br />
+{include file=$templates.TEMPLATE_ADDRESS}
 {include file=$templates.TEMPLATE_SEARCH}<br />
 {include file=$templates.TEMPLATE_SELECT}<br />
 {include file=$templates.TEMPLATE_TYPE}<br />
