Started on new template Trying to get db_artist module to work better
git-svn-id: svn://localhost/Media%20Server@103 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -7,6 +7,6 @@
 
 <body>
 Choose Layout:<br />
-<a href="{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}?template=default">Default</a> : <a href="{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}?template=extjs">ExtJS</a>
+<a href="{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}?template=default">Default</a> : <a href="{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}?template=extjs">ExtJS</a> : <a href="{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}?template=mobile">Mobile</a>
 </body>
 </html>
