--- a/templates/default/select.html
+++ b/templates/default/select.html
@@ -35,12 +35,11 @@
             - Download:
             	<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip/{$smarty.request.cat}/{$files[file].id}/Files.zip">zip</a> :
                 <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt/{$smarty.request.cat}/{$files[file].id}/Files.torrent">torrent</a>
-                {* if $files[file].Filepath|@handles:'video'}
+                {if $files[file].Filepath|@handles:'video'}
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/MP4/File{$files[file].id}.mp4">mp4</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/MPG/File{$files[file].id}.mpeg">mpg</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/WMV/File{$files[file].id}.wmv">wmv</a>
-                *}
-                {if $files[file].Filepath|@handles:'audio'}
+                {elseif $files[file].Filepath|@handles:'audio'}
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/MP4A/File{$files[file].id}.mp4">mp4</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/MP3/File{$files[file].id}.mp3">mp3</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/WMA/File{$files[file].id}.wma">wma</a>
