--- a/templates/default/select.html
+++ b/templates/default/select.html
@@ -21,10 +21,10 @@
 			<input type="radio" name="item[{$files[file].id}]" value="off" {if !$item_selected}checked="checked"{/if} />
             {if $smarty.request.detail < 2}
                 {if $files[file].Filetype=="FOLDER" || ($files[file].Filepath|@handles:'archive' && $smarty.request.cat != $prefix|cat:'archive') || ($files[file].Filepath|@handles:'diskimage' && $smarty.request.cat != $prefix|cat:'diskimage')}<a href="?dir={$files[file].Filepath|urlencode|htmlspecialchars}{if $files[file].Filepath|@handles:'archive'}&cat={$prefix}archive{elseif $files[file].Filepath|@handles:'diskimage'}&cat={$prefix}diskimage{/if}">{$files[file].Filepath}</a>
-                {elseif $files[file].Filepath|@handles:'archive'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}archive/{$smarty.request.cat}/{$files[file].id}/OUT/{$files[file].Filename}">{$files[file].Filepath}</a>
-                {elseif $files[file].Filepath|@handles:'diskimage'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file/{$prefix}diskimage/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>
-                {elseif $files[file].Filepath|@handles:'image_browser'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file/{$prefix}image_browser/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>
-                {else}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file/{$smarty.request.cat}/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>{/if}
+                {elseif $files[file].Filepath|@handles:'archive'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}archive.php/{$smarty.request.cat}/{$files[file].id}/OUT/{$files[file].Filename}">{$files[file].Filepath}</a>
+                {elseif $files[file].Filepath|@handles:'diskimage'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$prefix}diskimage/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>
+                {elseif $files[file].Filepath|@handles:'image_browser'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$prefix}image_browser/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>
+                {else}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$smarty.request.cat}/{$files[file].id}/{$files[file].Filename}">{$files[file].Filepath}</a>{/if}
             {elseif $smarty.request.detail == 2}
 				{foreach from=$smarty.session.columns item=column_value}
 					{if isset($files[file].$column_value)}
@@ -33,20 +33,20 @@
 				{/foreach}
 			{/if}
             - Download:
-            	<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip/{$smarty.request.cat}/{$files[file].id}/Files.zip">zip</a> :
-                <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt/{$smarty.request.cat}/{$files[file].id}/Files.torrent">torrent</a>
+            	<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip.php/{$smarty.request.cat}/{$files[file].Filename}/Files.zip">zip</a> :
+                <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt.php/{$smarty.request.cat}/{$files[file].Filename}/Files.torrent">torrent</a>
                 {if $files[file].Filepath|@handles:'video'}
-                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/MP4/File{$files[file].id}.mp4">mp4</a>
-                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/MPG/File{$files[file].id}.mpeg">mpg</a>
-                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/WMV/File{$files[file].id}.wmv">wmv</a>
+                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode.php/{$smarty.request.cat}/{$files[file].id}/MP4/File{$files[file].Filename}.mp4">mp4</a>
+                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode.php/{$smarty.request.cat}/{$files[file].id}/MPG/File{$files[file].Filename}.mpeg">mpg</a>
+                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode.php/{$smarty.request.cat}/{$files[file].id}/WMV/File{$files[file].Filename}.wmv">wmv</a>
                 {elseif $files[file].Filepath|@handles:'audio'}
-                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/MP4A/File{$files[file].id}.mp4">mp4</a>
-                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/MP3/File{$files[file].id}.mp3">mp3</a>
-                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode/{$smarty.request.cat}/{$files[file].id}/WMA/File{$files[file].id}.wma">wma</a>
+                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode.php/{$smarty.request.cat}/{$files[file].id}/MP4A/File{$files[file].Filename}.mp4">mp4</a>
+                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode.php/{$smarty.request.cat}/{$files[file].id}/MP3/File{$files[file].Filename}.mp3">mp3</a>
+                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}encode.php/{$smarty.request.cat}/{$files[file].id}/WMA/File{$files[file].Filename}.wma">wma</a>
                 {elseif $files[file].Filepath|@handles:'image'}
-                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert/{$smarty.request.cat}/{$files[file].id}/JPG/File{$files[file].id}.jpg">jpg</a>
-                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert/{$smarty.request.cat}/{$files[file].id}/GIF/File{$files[file].id}.gif">gif</a>
-                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert/{$smarty.request.cat}/{$files[file].id}/PNG/File{$files[file].id}.png">png</a>
+                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert.php/{$smarty.request.cat}/{$files[file].id}/JPG/File{$files[file].Filename}.jpg">jpg</a>
+                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert.php/{$smarty.request.cat}/{$files[file].id}/GIF/File{$files[file].Filename}.gif">gif</a>
+                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert.php/{$smarty.request.cat}/{$files[file].id}/PNG/File{$files[file].Filename}.png">png</a>
                 {/if}
 			<br />
 		{/section}
@@ -101,7 +101,7 @@
 					<span class="column">{$files[file].$column_value|string_format:$format_str}</span>
 				{/if}
 			{/foreach}
-			<span class="column"><a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip/{$smarty.request.cat}/{$files[file].id}/Files.zip">zip</a>:<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt/{$smarty.request.cat}/{$files[file].id}/Files.torrent">torrent</a></span>
+			<span class="column"><a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip.php/{$smarty.request.cat}/{$files[file].id}/Files.zip">zip</a>:<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt.php/{$smarty.request.cat}/{$files[file].id}/Files.torrent">torrent</a></span>
 			<span style="display:block; float:left; clear:both;"></span><br />
 		{/section}
 		</p>
@@ -142,7 +142,7 @@
 {foreach from=$smarty.session.columns item=column_value}
 				<td>{if isset($files[file].$column_value)}{$files[file].$column_value}{/if}</td>
 {/foreach}
-				<td><a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip/{$smarty.request.cat}/{$files[file].id}/Files.zip">zip</a>:<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt/{$smarty.request.cat}/{$files[file].id}/Files.torrent">torrent</a></td>
+				<td><a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip.php/{$smarty.request.cat}/{$files[file].id}/Files.zip">zip</a>:<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt.php/{$smarty.request.cat}/{$files[file].id}/Files.torrent">torrent</a></td>
 			</tr>
 {/section}
 		</table>
@@ -181,7 +181,7 @@
 {foreach from=$smarty.session.columns item=column_value}
 				<td>{if isset($files[file].$column_value)}{$files[file].$column_value}{/if}</td>
 {/foreach}
-				<td><a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip/{$smarty.request.cat}/{$files[file].id}/Files.zip">zip</a>:<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt/{$smarty.request.cat}/{$files[file].id}/Files.torrent">torrent</a></td>
+				<td><a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip.php/{$smarty.request.cat}/{$files[file].id}/Files.zip">zip</a>:<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt.php/{$smarty.request.cat}/{$files[file].id}/Files.torrent">torrent</a></td>
 			</tr>
 {/section}
 		</table>
