git-svn-id: svn://localhost/Media%20Server@118 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -13,14 +13,19 @@ $this->assign('modules_named', $modules_named);
 	<div id="builder">
 		Use this form to generate the list of files you would like to view:
 		<br />
-		<form name="search" action="{$smarty.server.PHP_SELF}" method="get">
+		<form name="search" action="{$search_str}" method="get">
+            {foreach from=$smarty.get key=k item=v}
+            {if $k != "search" && $k != "cat"}
+                <input type="hidden" name="{$k}" value="{$v}" />
+            {/if}
+            {/foreach}
 			<select name="cat">
 			{foreach item=module key=i from=$modules}
 				<option value="{$module}" {if isset($smarty.request.cat) && $smarty.request.cat eq $module}selected{/if}>{$modules_named.$i}</option>
 			{/foreach}
 			</select>
 			<br />
-			Contains <input name="search" type="text" value="{if isset($smarty.request.search)}{$smarty.request.search}{/if}" /> (Enter keywords)
+			Contains <input name="search" type="text" value="{if isset($smarty.request.search)}{$smarty.request.search|stripslashes|htmlspecialchars}{/if}" /> (Enter keywords)
 			<br />
 			Submit to apply filter.
 			<br />
