--- a/templates/default/type.html
+++ b/templates/default/type.html
@@ -2,6 +2,7 @@
 	Get the list:
 	<br />
 	<form action="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}list.php" method="get">
+		<input type="hidden" name="cat" value="{$smarty.request.cat}" />
 		Type <select name="list">
 			{foreach from=$types item=type key=name}
 			<option value="{$name}">{$type.name}</option>
