git-svn-id: svn://localhost/Media%20Server@158 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -25,7 +25,7 @@ $this->assign('modules_named', $modules_named);
 			{/foreach}
 			</select>
 			<br />
-			Contains <input name="search" type="text" value="{if isset($smarty.request.search)}{$smarty.request.search|stripslashes|htmlspecialchars}{/if}" /> (Enter keywords)
+			Contains <input name="search" type="text" value="{if isset($smarty.request.search)}{$smarty.request.search|htmlspecialchars}{/if}" /> (Enter keywords)
 			<br />
 			Submit to apply filter.
 			<br />
