status: working, new install in progress
git-svn-id: svn://localhost/Media%20Server@161 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/default/select.html
+++ b/templates/default/select.html
@@ -77,7 +77,9 @@ $this->assign('parts', $parts);
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert.php/{$smarty.request.cat}/{$files[file].id}/JPG/{$files[file].Filename}.jpg">jpg</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert.php/{$smarty.request.cat}/{$files[file].id}/GIF/{$files[file].Filename}.gif">gif</a>
                 : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}convert.php/{$smarty.request.cat}/{$files[file].id}/PNG/{$files[file].Filename}.png">png</a>
-                {/if}
+                {elseif $files[file].Filepath|@handles:'code'}
+                : <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$prefix}code/{$files[file].id}/{$files[file].Filename}.html">view</a>
+              {/if}
 			<br />
 		{/section}
 		</p>
