git-svn-id: svn://localhost/Media%20Server@165 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -13,6 +13,17 @@ body {
 	direction:ltr;
 }
 
+.template_box {
+	position:absolute;
+	z-index:9999;
+	right:0;
+	top:0;
+}
+
+.template_box a {
+	color:#FFF;
+}
+
 #bodydiv {
 	padding:0 400px 0 400px
 }
