git-svn-id: svn://localhost/Media%20Server@167 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/templates/live/live.css
+++ b/templates/live/live.css
@@ -171,6 +171,14 @@ body {
 
 .itemTable td {
 	width:7em;
+	text-align:center;
+}
+
+.itemTable div {
+	text-align:center;
+	margin-left:1.2em;
+	height:48px;
+	width:48px;
 }
 
 .itemLink {
