--- a/templates/live/query.html
+++ b/templates/live/query.html
@@ -14,9 +14,9 @@
 		<div id="expander">
 			<table id="header" cellpadding="0" cellspacing="0">
 				<tr>
-					<td>
-					{include file=$templates.TEMPLATE_TEMPLATE}
-					</td>
+					<td id="siteTitle">{$smarty.const.HTML_NAME|@htmlspecialchars}</td>
+					<td class="searchParent">{include file=$templates.TEMPLATE_SEARCH}</td>
+					<td id="templates">{include file=$templates.TEMPLATE_TEMPLATE}</td>
 				</tr>
 			</table>
 			<div id="container">
@@ -60,6 +60,7 @@
 											<div class="contentSpacing">
 												<h1 class="title">{if $current eq ''}{$smarty.const.HTML_NAME|@htmlspecialchars}{else}{$current|@htmlspecialchars}{/if}</h1>
 												<span class="subText">Use remote access to browse and download files.</span>
+												{include file=$templates.TEMPLATE_PAGES}
 												<div class="titlePadding"></div>
 												<div class="files">
 													{section name=file loop=$files}
@@ -95,6 +96,8 @@
 														</div>
 													{/section}
 												</div>
+												<div class="titlePadding"></div>
+												{include file=$templates.TEMPLATE_PAGES}
 											</div>
 										</td>
 									</tr>
